# pi

./: CMakeLists.txt  run_tests.sh
lab01/: fibo.c  perf.c
lab02/: half.c  weight.c
lab03/: min.c  pair.c  pri.c
lab04/: fact.c  merge.c  neigh.c
lab05/: spiral.c  square.c
lab06/: rec.c  tri.c
lab07/: stamp.c
lab08/: last.c  odd.c
lab09/: semi.c  sol.c
lab1/: CMakeLists.txt  primes.c
lab10/: CMakeLists.txt  ban.1.out  ban.2.in  ban.2.out  ban.c  jump.1.out  jump.2.in  jump.2.out  jump.3.in  jump.3.out  jump.4.in  jump.4.out  jump.5.in  jump.5.out  jump.c  net.1.in  net.c
lab2/: CMakeLists.txt  narc.c
lab3/: CMakeLists.txt
lab4/: CMakeLists.txt  merge.c  neigh.c
lab5/: CMakeLists.txt  field.c  field_kappa.c
lab6/: CMakeLists.txt  rom.c
lab7/: CMakeLists.txt  bin.c  seg.c
lab8/: CMakeLists.txt  odd.c  seq.c
lab9/: CMakeLists.txt  ring.c  sol.1.in
